refactor: collect(Collectors.toList())를 toList()로 변경
- collect(Collectors.toList()) 는 변경 가능한 리스트를 반환하고, toList()는 불변 리스트를 반환함. 조회 시에는 toList()를 사용하는 것이 1. 코드 길이가 줄어 가독성이 좋아지고, 2. 조금 더 메모리 효율이 좋고 3. 의도치 않은 수정을 막을 수 있어 수정했습니다.